fix vertical alignment of social buttons

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -40,6 +40,10 @@ body {
     border-spacing: 4px;
 }
 
+.social-button {
+    vertical-align: top;
+}
+
 // For file upload
 .drop-box {
     background: #F8F8F8;
